--- a/YYQHome/Views/Web.config
+++ b/YYQHome/Views/Web.config
@@ -49,7 +49,7 @@
 
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-
+	<directoryBrowse enabled="false"/>
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
