--- a/YYQHome/Web.config
+++ b/YYQHome/Web.config
@@ -58,6 +58,7 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
+	<directoryBrowse enabled="false"/>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
