--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="MProjectDetail.cs" />
     <Compile Include="MProject.cs" />
+    <Compile Include="MUserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
