--- a/YYQHome/Web.config
+++ b/YYQHome/Web.config
@@ -14,10 +14,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
-    <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
-    </authentication>
+	  <trust level="Full" originUrl=""/>
+	  <compilation debug="true" targetFramework="4.0" />
+	<customErrors  mode="Off"></customErrors>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -54,6 +53,9 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+	<authentication mode="Forms">
+		<forms loginUrl="/Admin/Login/"  defaultUrl="/Admin/ProjectManage/" name="DemoInfo"></forms>
+	</authentication>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
