添加together静态页面

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BProject.cs" />
+    <Compile Include="BTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
